# Controllable

./: .gitattributes  CMakeLists.txt  README.md  about.md  changelog.md  logo.psd  mod.json  userobjects.md
.github/workflows/: multi-platform.yml
include/: Controllable.hpp  Controller.hpp  enums.hpp
lib/steamworks/: README.md
resources/: sliderthumb.psd  sliderthumbsel.psd
src/: CLManager.cpp  CLManager.hpp  ControllableManager.cpp  ControllableManager.hpp  Controller.cpp  Controller.hpp  api.cpp  enums.hpp  events.cpp  globals.cpp  globals.hpp  shaders.cpp  shaders.hpp  sliderfix.cpp  utils.cpp  utils.hpp  xinput.cpp
src/hooks/: CCApplication.cpp  CCApplication.hpp  CCLayer.cpp  CCLayer.hpp  CCScheduler.cpp  CCScheduler.hpp  CCTouchDispatcher.cpp  LevelEditorLayer.cpp  LoadingLayer.cpp  LoadingLayer.hpp  MenuLayer.cpp  MenuLayer.hpp
src/hooks/compat/: CCApplication.hpp  CCDirector.cpp  CCDirector.hpp  CCMenuItem.cpp  CCMenuItem.hpp  CCNode.cpp  CCNode.hpp  CCTextInputNode.cpp  CCTextInputNode.hpp  DialogLayer.cpp  DialogLayer.hpp  GJChestSprite.cpp  GJChestSprite.hpp  GJDropDownLayer.cpp  GJDropDownLayer.hpp  GJItemIcon.cpp  GJItemIcon.hpp  GeodeTabSprite.cpp  GeodeTabSprite.hpp  LevelEditorLayer.cpp  LevelEditorLayer.hpp  MenuLayer.cpp  ModSettingsPopup.cpp  ModSettingsPopup.hpp  TextLinkedButtonWrapper.cpp  TextLinkedButtonWrapper.hpp
src/hooks/compat/hide-controller-ui/: EndLevelLayer.cpp  EndLevelLayer.hpp  FLAlertLayer.cpp  FLAlertLayer.hpp  GameToolbox.cpp  GameToolbox.hpp  GauntletSelectLayer.cpp  GauntletSelectLayer.hpp  LevelBrowserLayer.cpp  LevelBrowserLayer.hpp  LevelSelectLayer.cpp  LevelSelectLayer.hpp  PauseLayer.cpp  PauseLayer.hpp
src/platform/android/: Controller.cpp
src/platform/windows/: Controller.cpp  steaminput.cpp  steaminput.hpp  xinput.cpp  xinput.hpp
src/platform/windows/hooks/: CCApplication.cpp  CCEGLView.cpp  CCEGLView.hpp  MenuLayer.cpp  MenuLayer.hpp
